--- a/semester2/semester2.css
+++ b/semester2/semester2.css
@@ -6,22 +6,135 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    width: 100%;
-    box-sizing: border-box;
 }
 
 body {
     background-color: whitesmoke;
-    min-height: 150vh;
+    height: 100vh;
+    width: 100vw;
     display: grid;
     place-items: center;
     background: var(--clr-bg);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--clr-neon);
+    overflow-x: hidden;
 }
 
 img {
     pointer-events: none;
+}
+
+
+/* scrollbar */
+
+::-webkit-scrollbar {
+    width: 11px;
+    height: 11px;
+}
+
+ ::-webkit-scrollbar-thumb {
+    background: linear-gradient(74deg, #29062e 39%, #70094a 54%);
+    border-radius: 10px;
+}
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(13deg, #29062E 14%, #70094a 64%);
+}
+
+ ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 12px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
+}
+
+
+/* neon buttons */
+
+:root {
+    --clr-neon: hsl(317 100% 54%);
+    --clr-bg: rgb(0, 0, 0, 0.9);
+}
+
+*,
+*::before *::after {
+    box-sizing: border-box;
+}
+
+.buttons {
+    width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bt-center {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.neon-button {
+    font-size: 2rem;
+    display: inline-block;
+    cursor: pointer;
+    padding-top: auto;
+    padding-bottom: auto;
+    text-align: center;
+    text-decoration: none;
+    color: var(--clr-neon);
+    border: var(--clr-neon) 0.125em solid;
+    padding: .25em 1em;
+    border-radius: 0.25em;
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--clr-neon);
+    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+    position: relative;
+    transition: background-color 100ms linear;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.neon-button::before {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    background: var(--clr-neon);
+    top: 120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(2em);
+    opacity: 0.7;
+}
+
+.neon-button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 2em 0.1em var(--clr-neon);
+    opacity: 0;
+    transition: opacity 100ms linear;
+}
+
+.neon-button:hover,
+.neon-button:focus {
+    background: var(--clr-neon);
+    color: var(--clr-bg);
+    text-shadow: none;
+}
+
+.neon-button:hover::before {
+    opacity: 1;
+}
+
+.neon-button:hover::after {
+    opacity: 1;
 }
 
 
@@ -179,71 +292,91 @@ header button {
 }
 
 
-/* neon buttons */
+/* footer */
 
-:root {
-    --clr-neon: hsl(317 100% 54%);
-    --clr-bg: hsl(323 21% 16%);
-}
-
-*,
-*::before *::after {
-    box-sizing: border-box;
-}
-
-.neon-button {
-    font-size: 2rem;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    color: var(--clr-neon);
-    border: var(--clr-neon) 0.125em solid;
-    padding: .25em 1em;
-    border-radius: 0.25em;
-    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--clr-neon);
-    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
-    position: relative;
-    transition: background-color 100ms linear;
-}
-
-.neon-button::before {
-    pointer-events: none;
-    content: "";
+footer {
     position: absolute;
-    background: var(--clr-neon);
-    top: 120%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-    filter: blur(2em);
-    opacity: 0.7;
-}
-
-.neon-button::after {
-    content: "";
-    position: absolute;
-    top: 0;
+    background: rgb(12, 12, 12);
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
+    color: whitesmoke;
     bottom: 0;
     left: 0;
-    right: 0;
-    box-shadow: 0 0 2em 0.1em var(--clr-neon);
-    opacity: 0;
-    transition: opacity 100ms linear;
 }
 
-.neon-button:hover,
-.neon-button:focus {
-    background: var(--clr-neon);
-    color: var(--clr-bg);
-    text-shadow: none;
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
-.neon-button:hover::before {
-    opacity: 1;
+.footer-content h3 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
 }
 
-.neon-button:hover::after {
-    opacity: 1;
+.footer-content p {
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.footer-content span:hover {
+    color: purple;
+}
+
+.socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+.socials a i {
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+
+.socials a:hover i {
+    color: purple;
+}
+
+.footer-bottom {
+    background-color: black;
+    width: 100vw;
+    padding: 20px 0;
+}
+
+.footer-bottom p {
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+    justify-content: center;
+}
+
+.footer-bottom span {
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+    color: whitesmoke;
+}
+
+.footer-bottom span:hover {
+    color: purple;
 }
